After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 688602 - Assertion fixes in the git plugin.
Assertion fixes in the git plugin.
Status: RESOLVED FIXED
Product: anjuta
Classification: Applications
Component: plugins: git
unspecified
Other All
: Normal normal
: ---
Assigned To: James Liggett
Anjuta maintainers
Depends on:
Blocks:
 
 
Reported: 2012-11-18 20:05 UTC by Carl-Anton Ingmarsson
Modified: 2012-11-18 23:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
git: Fix assertion when running g_signal_handlers_disconnect on already destroyed widget. (1.73 KB, patch)
2012-11-18 20:05 UTC, Carl-Anton Ingmarsson
committed Details | Review
git: Fix assertion when running g_hash_table_unref() on a NULL pointer. (1.03 KB, patch)
2012-11-18 20:05 UTC, Carl-Anton Ingmarsson
committed Details | Review

Description Carl-Anton Ingmarsson 2012-11-18 20:05:40 UTC
See attached patches.
Comment 1 Carl-Anton Ingmarsson 2012-11-18 20:05:42 UTC
Created attachment 229303 [details] [review]
git: Fix assertion when running g_signal_handlers_disconnect on already destroyed widget.

The call to anjuta_shell_remove_widget() will destroy the dock_window widget so the
subsequent g_signal_handlers_disconnect_by_func() is passed an invalid object.
Comment 2 Carl-Anton Ingmarsson 2012-11-18 20:05:46 UTC
Created attachment 229304 [details] [review]
git: Fix assertion when running g_hash_table_unref() on a NULL pointer.

self->priv->refs will not be set until the command has finished so it may be NULL when the
plugin is deactivated.
Comment 3 James Liggett 2012-11-18 23:44:53 UTC
Applied, thanks!