git: Fix assertion when running g_signal_handlers_disconnect on already destroyed widget.

The call to anjuta_shell_remove_widget() will destroy the dock_window widget so the
subsequent g_signal_handlers_disconnect_by_func() is passed an invalid object.

https://bugzilla.gnome.org/show_bug.cgi?id=688602